feat : 내부 에러 구조화 통일
