# internal/adapter/rest/dto/user_dto.go
@@ -32,7 +32,37 @@ type CheckPasswordRequest struct {
 // Response --------------------------------------
 
 type LoginResponse struct {
-	Token  string `json:"token"`
-	UserID string `json:"user_id"`
-	Email  string `json:"email"`
+	Token  string `json:"token" example:"eyJhbGciOiJIUzI1NiIsIn..."`
+	UserID string `json:"user_id" example:"user-uuid-string"`
+	Email  string `json:"email" example:"user@example.com"`
+}
+
+type UserResponse struct {
+	ID    string `json:"id" example:"user-uuid-string"`
+	Email string `json:"email" example:"user@example.com"`
+}
+
+type DuplicateEmailResponse struct {
+	IsDuplicate bool `json:"is_duplicate" example:"true"`
+}
+
+func NewLoginResponse(token, userID, email string) LoginResponse {
+	return LoginResponse{
+		Token:  token,
+		UserID: userID,
+		Email:  email,
+	}
+}
+
+func NewUserResponse(id, email string) UserResponse {
+	return UserResponse{
+		ID:    id,
+		Email: email,
+	}
+}
+
+func NewDuplicateEmailResponse(duplicate bool) DuplicateEmailResponse {
+	return DuplicateEmailResponse{
+		IsDuplicate: duplicate,
+	}
 }
